<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/total"
        android:layout_width="64dp"
        android:layout_height="24dp"

        android:hint="@string/qty"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.708"
        app:layout_constraintStart_toEndOf="@+id/checkoutBtn"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.163" />

    <TableLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="354dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498">

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:hint="@string/qty"
                android:text="@string/milk" />

            <Space
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/milkQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:autofillHints=""
                android:ems="5"
                android:hint="@string/qty"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <CheckBox
                android:id="@+id/milkAdd"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/eggs" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText

                android:id="@+id/eggQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />


            <CheckBox
                android:id="@+id/eggAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/beef" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/beefQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />


            <CheckBox
                android:id="@+id/beefAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/soda" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/sodaQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />


            <CheckBox
                android:id="@+id/sodaAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/cookies" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/cookieQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/cookieAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/fruit" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fruitQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/fruitAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_marginStart="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/veggies" />

            <Space
                android:layout_width="75dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/veggiesQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                android:ems="5"
                android:hint="@string/qty"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textAlignment="center"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/veggiesAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="" />
        </TableRow>


    </TableLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="172dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="55dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Space
            android:layout_width="85dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:ems="5"
            android:minHeight="48dp"
            android:text="@string/quantity"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Space
            android:layout_width="50dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/add"
            android:textAlignment="center"
            android:textStyle="bold" />
    </TableRow>

    <Button
        android:id="@+id/checkoutBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/light_gray"
        android:text="@string/checkout"
        android:textColor="@color/black"
        android:onClick="checkout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.07" />
</androidx.constraintlayout.widget.ConstraintLayout>